Tweaks to safetyDf

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 71,
    "id": "c6cb01ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import necessary modules\n",
     "from pyspark.sql import SparkSession, Window\n",
-    "from pyspark.sql.functions import col, when, lag, round, sqrt, pow, sum as sum_func, max as max_func,row_number, lit, min as min_func\n",
-    "from pyspark.sql.types import StructType, StructField, LongType, StringType, BooleanType, DoubleType\n"
+    "from pyspark.sql.functions import col, when, lag, round, sqrt, pow, sum as sum_func, max as max_func,row_number, lit, min as min_func, abs\n",
+    "from pyspark.sql.types import StructType, StructField, LongType, StringType, BooleanType, DoubleType, IntegerType\n",
+    "from pyspark.sql.functions import monotonically_increasing_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 72,
    "id": "2597fb1d",
    "metadata": {},
    "outputs": [],
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 73,
    "id": "e8d8e76d",
    "metadata": {},
    "outputs": [
@@ -34,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/06/04 16:15:47 WARN CacheManager: Asked to cache already cached data.\n"
+      "25/06/06 15:02:47 WARN CacheManager: Asked to cache already cached data.\n"
      ]
     }
    ],
@@ -51,7 +52,7 @@
     "])\n",
     "\n",
     "#Merge all the tracking data into one dataframe.\n",
-    "trackingDf = spark.read.parquet(\"data/tracking/\").cache()\n",
+    "trackingDf = spark.read.schema(schema).parquet(\"data/tracking/\").cache()\n",
     "\n",
     "#Filter and select tracking data just before the snap - to determine if there is any pre-snap motion\n",
     "snapEventsDf = trackingDf.filter(col(\"frameType\") == \"SNAP\").groupby(\"gameId\", \"playId\").agg(min_func(\"frameId\").alias(\"snapEvent\"))\n",
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 74,
    "id": "7b5f5ecd",
    "metadata": {},
    "outputs": [
@@ -70,64 +71,56 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/06/04 16:20:42 WARN CacheManager: Asked to cache already cached data.\n",
-      "25/06/04 16:20:44 WARN MemoryStore: Not enough space to cache rdd_345_0 in memory! (computed 209.7 MiB so far)\n",
-      "25/06/04 16:20:44 WARN MemoryStore: Not enough space to cache rdd_345_1 in memory! (computed 209.6 MiB so far)\n",
-      "25/06/04 16:20:51 WARN MemoryStore: Not enough space to cache rdd_345_3 in memory! (computed 209.6 MiB so far)\n",
-      "25/06/04 16:20:51 WARN MemoryStore: Not enough space to cache rdd_345_2 in memory! (computed 209.7 MiB so far)\n",
-      "25/06/04 16:20:59 WARN MemoryStore: Not enough space to cache rdd_345_4 in memory! (computed 209.6 MiB so far)\n",
-      "25/06/04 16:20:59 WARN MemoryStore: Not enough space to cache rdd_345_5 in memory! (computed 209.7 MiB so far)\n",
-      "25/06/04 16:21:06 WARN MemoryStore: Not enough space to cache rdd_345_6 in memory! (computed 209.6 MiB so far)\n",
-      "25/06/04 16:21:06 WARN MemoryStore: Not enough space to cache rdd_345_7 in memory! (computed 209.6 MiB so far)\n",
-      "25/06/04 16:21:12 WARN MemoryStore: Not enough space to cache rdd_345_8 in memory! (computed 209.6 MiB so far)\n",
-      "25/06/04 16:21:12 WARN MemoryStore: Not enough space to cache rdd_345_0 in memory! (computed 209.7 MiB so far)\n",
-      "25/06/04 16:21:15 WARN MemoryStore: Not enough space to cache rdd_345_1 in memory! (computed 322.0 MiB so far)\n",
-      "25/06/04 16:21:17 WARN MemoryStore: Not enough space to cache rdd_345_2 in memory! (computed 322.1 MiB so far)\n",
-      "25/06/04 16:21:17 WARN MemoryStore: Not enough space to cache rdd_345_3 in memory! (computed 86.8 MiB so far)\n",
-      "25/06/04 16:21:20 WARN MemoryStore: Not enough space to cache rdd_345_5 in memory! (computed 86.8 MiB so far)\n",
-      "25/06/04 16:21:20 WARN MemoryStore: Not enough space to cache rdd_345_4 in memory! (computed 322.0 MiB so far)\n",
-      "25/06/04 16:21:22 WARN MemoryStore: Not enough space to cache rdd_345_7 in memory! (computed 86.8 MiB so far)\n",
-      "25/06/04 16:21:22 WARN MemoryStore: Not enough space to cache rdd_345_6 in memory! (computed 322.0 MiB so far)\n",
-      "25/06/04 16:21:24 WARN MemoryStore: Not enough space to cache rdd_345_8 in memory! (computed 321.9 MiB so far)\n",
-      "[Stage 190:>                                                        (0 + 1) / 1]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------+------+---------+--------+\n",
-      "|    gameId|playId|isOffence|isMotion|\n",
-      "+----------+------+---------+--------+\n",
-      "|2022090800|  1504|    false|   false|\n",
-      "|2022090800|  1504|     true|   false|\n",
-      "|2022090800|  3674|     true|    true|\n",
-      "|2022090800|  3674|    false|   false|\n",
-      "|2022091100|   501|    false|    true|\n",
-      "|2022091100|   501|     true|    true|\n",
-      "|2022091100|   828|    false|    true|\n",
-      "|2022091100|   828|     true|   false|\n",
-      "|2022091100|  2984|    false|   false|\n",
-      "|2022091100|  2984|     true|   false|\n",
-      "|2022091100|  3504|    false|   false|\n",
-      "|2022091100|  3504|     true|   false|\n",
-      "|2022091100|  4187|    false|   false|\n",
-      "|2022091100|  4187|     true|   false|\n",
-      "|2022091101|  1192|     true|    true|\n",
-      "|2022091101|  1192|    false|   false|\n",
-      "|2022091101|  1213|     true|   false|\n",
-      "|2022091101|  1213|    false|   false|\n",
-      "|2022091101|  1537|     true|    true|\n",
-      "|2022091101|  1537|    false|    true|\n",
-      "+----------+------+---------+--------+\n",
-      "only showing top 20 rows\n"
+      "25/06/06 15:02:47 WARN CacheManager: Asked to cache already cached data.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "25/06/06 15:02:48 WARN MemoryStore: Not enough space to cache rdd_4_1 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/06 15:02:48 WARN MemoryStore: Not enough space to cache rdd_4_0 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/06 15:02:54 WARN MemoryStore: Not enough space to cache rdd_4_2 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/06 15:02:58 WARN MemoryStore: Not enough space to cache rdd_4_4 in memory! (computed 101.0 MiB so far)\n",
+      "25/06/06 15:02:58 WARN MemoryStore: Not enough space to cache rdd_4_5 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/06 15:03:02 WARN MemoryStore: Not enough space to cache rdd_4_7 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/06 15:03:06 WARN MemoryStore: Not enough space to cache rdd_4_0 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/06 15:03:06 WARN MemoryStore: Not enough space to cache rdd_4_8 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/06 15:03:10 WARN MemoryStore: Not enough space to cache rdd_4_1 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/06 15:03:10 WARN MemoryStore: Not enough space to cache rdd_4_2 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/06 15:03:13 WARN MemoryStore: Not enough space to cache rdd_4_4 in memory! (computed 101.0 MiB so far)\n",
+      "25/06/06 15:03:15 WARN MemoryStore: Not enough space to cache rdd_4_5 in memory! (computed 101.0 MiB so far)\n",
+      "25/06/06 15:03:18 WARN MemoryStore: Not enough space to cache rdd_4_7 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/06 15:03:18 WARN MemoryStore: Not enough space to cache rdd_4_8 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/06 15:03:21 WARN MemoryStore: Not enough space to cache rdd_4_0 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/06 15:03:22 WARN MemoryStore: Not enough space to cache rdd_4_1 in memory! (computed 152.0 MiB so far)\n",
+      "25/06/06 15:03:23 WARN MemoryStore: Not enough space to cache rdd_4_3 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/06 15:03:23 WARN MemoryStore: Not enough space to cache rdd_4_2 in memory! (computed 152.1 MiB so far)\n",
+      "25/06/06 15:03:25 WARN MemoryStore: Not enough space to cache rdd_4_7 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/06 15:03:26 WARN MemoryStore: Not enough space to cache rdd_4_8 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/06 15:03:27 WARN MemoryStore: Not enough space to cache rdd_4_0 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/06 15:03:29 WARN MemoryStore: Not enough space to cache rdd_4_2 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/06 15:03:31 WARN MemoryStore: Not enough space to cache rdd_4_4 in memory! (computed 101.0 MiB so far)\n",
+      "25/06/06 15:03:32 WARN MemoryStore: Not enough space to cache rdd_4_6 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/06 15:03:32 WARN MemoryStore: Not enough space to cache rdd_4_7 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/06 15:03:33 WARN MemoryStore: Not enough space to cache rdd_4_8 in memory! (computed 27.3 MiB so far)\n",
       "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+----------+------+-------+-----+-----+-----------+---------+--------+---------+--------------+------------------+------------+\n",
+      "|  nflId|    gameId|playId|frameId|    x|    y|  frameType|snapEvent|position|isOffence|yardlineNumber|          distance|max(frameId)|\n",
+      "+-------+----------+------+-------+-----+-----+-----------+---------+--------+---------+--------------+------------------+------------+\n",
+      "|52542.0|2022092511|  1986|     16|15.24|36.28|BEFORE_SNAP|       26|      FS|    false|            13|              2.24|          25|\n",
+      "|52542.0|2022092511|  1986|     17|15.31|36.31|BEFORE_SNAP|       26|      FS|    false|            13|2.3100000000000005|          25|\n",
+      "|52542.0|2022092511|  1986|     18|15.37|36.34|BEFORE_SNAP|       26|      FS|    false|            13| 2.369999999999999|          25|\n",
+      "|52542.0|2022092511|  1986|     19|15.42|36.36|BEFORE_SNAP|       26|      FS|    false|            13|              2.42|          25|\n",
+      "|52542.0|2022092511|  1986|     20|15.47|36.37|BEFORE_SNAP|       26|      FS|    false|            13|2.4700000000000006|          25|\n",
+      "+-------+----------+------+-------+-----+-----+-----------+---------+--------+---------+--------------+------------------+------------+\n",
+      "only showing top 5 rows\n"
      ]
     }
    ],
@@ -144,6 +137,8 @@
     "#Add positions column, through a join\n",
     "presnapDf = presnapDf.join(playersDf.select(\"nflId\", \"position\"), on=\"nflId\", how=\"left\")\n",
     "\n",
+    "playersDf.unpersist()\n",
+    "\n",
     "#Position classifications\n",
     "offensivePositions = [\"QB\", \"RB\", \"FB\", \"HB\", \"WR\", \"TE\", \"LT\", \"LG\", \"C\", \"RG\", \"RT\"]\n",
     "defensivePositions = [\"CB\", \"S\", \"FS\", \"SS\", \"MLB\", \"OLB\", \"ILB\", \"LB\", \"DT\", \"DE\", \"NT\", \"DB\"]\n",
@@ -151,11 +146,31 @@
     "#Create a classifier column for if the player is on offence or defence\n",
     "presnapDf = presnapDf.withColumn(\"isOffence\",when(col(\"position\").isin(*offensivePositions), True).when(col(\"position\").isin(*defensivePositions), False).otherwise(lit(None)).cast(BooleanType()))\n",
     "\n",
+    "safetyDf = presnapDf.filter(col(\"position\").isin([\"SS\", \"FS\"]))\n",
+    "\n",
+    "schema = StructType([\n",
+    "    StructField(\"gameId\", LongType(), True),\n",
+    "    StructField(\"playId\", LongType(), True),\n",
+    "    StructField(\"yardlineNumber\", LongType(), True)\n",
+    "])\n",
+    "\n",
+    "playsDf = spark.read.schema(schema).parquet(\"data/plays.parquet\").cache()\n",
+    "\n",
+    "safetyDf = safetyDf.join(playsDf.select(\"gameId\", \"playId\", \"yardlineNumber\"), on = [\"gameId\", \"playId\"], how = \"left\")\n",
+    "\n",
+    "safetyDf = safetyDf.withColumn(\"distance\", abs(col(\"yardlineNumber\") - col(\"x\")))\n",
+    "\n",
+    "frameGroupByDf = safetyDf.groupBy(\"nflId\", \"gameId\", \"playId\").agg(max_func(\"frameId\"))\n",
+    "\n",
+    "safetyDf = safetyDf.join(frameGroupByDf, on = [\"nflId\",\"gameId\", \"playId\"], how = \"inner\")\n",
+    "\n",
+    "safetyDf.show(5)\n",
+    "\n",
     "#Drop redundant columns\n",
     "presnapDf = presnapDf.drop(\"frameId\", \"frameType\", \"snapEvent\", \"position\")\n",
     "\n",
-    "#Define window for ordering\n",
-    "sparkWindow = Window.partitionBy(\"gameId\", \"playId\", \"nflId\").orderBy(\"time\")  # assuming 'time' exists\n",
+    "presnapDf = presnapDf.withColumn(\"sequenceId\", monotonically_increasing_id())\n",
+    "sparkWindow = Window.partitionBy(\"gameId\", \"playId\", \"nflId\").orderBy(\"sequenceId\")\n",
     "\n",
     "#Add orderId using row number (for later sorting)\n",
     "presnapDf = presnapDf.withColumn(\"orderId\", row_number().over(sparkWindow))\n",
@@ -164,11 +179,12 @@
     "presnapDf = presnapDf.withColumn(\"prevY\", round(lag(\"y\").over(sparkWindow), 2))\n",
     "\n",
     "#Calculate cumulative distance\n",
-    "presnapDf = presnapDf.withColumn(\n",
-    "    \"cumulativeDistance\", round(when(col(\"prevX\").isNull() | col(\"prevY\").isNull(), 0.0).otherwise(sqrt(pow(col(\"x\") - col(\"prevX\"), 2) + pow(col(\"y\") - col(\"prevY\"), 2))),5))\n",
+    "presnapDf = presnapDf.withColumn(\"cumulativeDistance\", round(when(col(\"prevX\").isNull() | col(\"prevY\").isNull(), 0.0).otherwise(sqrt(pow(col(\"x\") - col(\"prevX\"), 2) + pow(col(\"y\") - col(\"prevY\"), 2))),5))\n",
     "\n",
     "#Sum all the movement values - this gives total distance moved in a second\n",
     "playerMotion = presnapDf.groupBy(\"gameId\", \"playId\", \"nflId\", \"isOffence\").agg(sum_func(\"cumulativeDistance\").alias(\"distanceMoved\"))\n",
+    "\n",
+    "presnapDf.unpersist()\n",
     "\n",
     "#Using a threshold of 2 yards in the 1 second time frame, determine if the player was in motion\n",
     "playerMotion = playerMotion.withColumn(\"motion\", col(\"distanceMoved\") > 2)\n",
@@ -177,9 +193,7 @@
     "playMotion = playerMotion.groupBy(\"gameId\", \"playId\", \"isOffence\").agg(max_func(\"motion\").alias(\"isMotion\"))\n",
     "\n",
     "#Create final result\n",
-    "playMotion = playMotion.select(\"gameId\", \"playId\", \"isOffence\", \"isMotion\")\n",
-    "\n",
-    "playMotion.show()\n"
+    "playMotion = playMotion.select(\"gameId\", \"playId\", \"isOffence\", \"isMotion\")"
    ]
   }
  ],
