--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "c6cb01ca",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "2597fb1d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "e8d8e76d",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/06/06 15:02:47 WARN CacheManager: Asked to cache already cached data.\n"
+      "25/06/10 07:49:27 WARN CacheManager: Asked to cache already cached data.\n"
      ]
     }
    ],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "7b5f5ecd",
    "metadata": {},
    "outputs": [
@@ -71,39 +71,77 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/06/06 15:02:47 WARN CacheManager: Asked to cache already cached data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/06/06 15:02:48 WARN MemoryStore: Not enough space to cache rdd_4_1 in memory! (computed 65.8 MiB so far)\n",
-      "25/06/06 15:02:48 WARN MemoryStore: Not enough space to cache rdd_4_0 in memory! (computed 65.8 MiB so far)\n",
-      "25/06/06 15:02:54 WARN MemoryStore: Not enough space to cache rdd_4_2 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/06 15:02:58 WARN MemoryStore: Not enough space to cache rdd_4_4 in memory! (computed 101.0 MiB so far)\n",
-      "25/06/06 15:02:58 WARN MemoryStore: Not enough space to cache rdd_4_5 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/06 15:03:02 WARN MemoryStore: Not enough space to cache rdd_4_7 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/06 15:03:06 WARN MemoryStore: Not enough space to cache rdd_4_0 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/06 15:03:06 WARN MemoryStore: Not enough space to cache rdd_4_8 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/06 15:03:10 WARN MemoryStore: Not enough space to cache rdd_4_1 in memory! (computed 65.8 MiB so far)\n",
-      "25/06/06 15:03:10 WARN MemoryStore: Not enough space to cache rdd_4_2 in memory! (computed 65.8 MiB so far)\n",
-      "25/06/06 15:03:13 WARN MemoryStore: Not enough space to cache rdd_4_4 in memory! (computed 101.0 MiB so far)\n",
-      "25/06/06 15:03:15 WARN MemoryStore: Not enough space to cache rdd_4_5 in memory! (computed 101.0 MiB so far)\n",
-      "25/06/06 15:03:18 WARN MemoryStore: Not enough space to cache rdd_4_7 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/06 15:03:18 WARN MemoryStore: Not enough space to cache rdd_4_8 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/06 15:03:21 WARN MemoryStore: Not enough space to cache rdd_4_0 in memory! (computed 65.8 MiB so far)\n",
-      "25/06/06 15:03:22 WARN MemoryStore: Not enough space to cache rdd_4_1 in memory! (computed 152.0 MiB so far)\n",
-      "25/06/06 15:03:23 WARN MemoryStore: Not enough space to cache rdd_4_3 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/06 15:03:23 WARN MemoryStore: Not enough space to cache rdd_4_2 in memory! (computed 152.1 MiB so far)\n",
-      "25/06/06 15:03:25 WARN MemoryStore: Not enough space to cache rdd_4_7 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/06 15:03:26 WARN MemoryStore: Not enough space to cache rdd_4_8 in memory! (computed 65.8 MiB so far)\n",
-      "25/06/06 15:03:27 WARN MemoryStore: Not enough space to cache rdd_4_0 in memory! (computed 65.8 MiB so far)\n",
-      "25/06/06 15:03:29 WARN MemoryStore: Not enough space to cache rdd_4_2 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/06 15:03:31 WARN MemoryStore: Not enough space to cache rdd_4_4 in memory! (computed 101.0 MiB so far)\n",
-      "25/06/06 15:03:32 WARN MemoryStore: Not enough space to cache rdd_4_6 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/06 15:03:32 WARN MemoryStore: Not enough space to cache rdd_4_7 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/06 15:03:33 WARN MemoryStore: Not enough space to cache rdd_4_8 in memory! (computed 27.3 MiB so far)\n",
+      "25/06/10 07:49:27 WARN CacheManager: Asked to cache already cached data.\n",
+      "25/06/10 07:49:44 WARN MemoryStore: Not enough space to cache rdd_11_0 in memory! (computed 152.0 MiB so far)\n",
+      "25/06/10 07:49:44 WARN BlockManager: Persisting block rdd_11_0 to disk instead.\n",
+      "25/06/10 07:49:49 WARN MemoryStore: Not enough space to cache rdd_11_2 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:49:49 WARN BlockManager: Persisting block rdd_11_2 to disk instead.\n",
+      "25/06/10 07:49:52 WARN MemoryStore: Not enough space to cache rdd_11_3 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:49:52 WARN BlockManager: Persisting block rdd_11_3 to disk instead.\n",
+      "25/06/10 07:49:59 WARN MemoryStore: Not enough space to cache rdd_11_2 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:49:59 WARN MemoryStore: Not enough space to cache rdd_11_3 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:02 WARN MemoryStore: Not enough space to cache rdd_11_4 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:50:02 WARN BlockManager: Persisting block rdd_11_4 to disk instead.\n",
+      "25/06/10 07:50:04 WARN MemoryStore: Not enough space to cache rdd_11_5 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:04 WARN BlockManager: Persisting block rdd_11_5 to disk instead.\n",
+      "25/06/10 07:50:10 WARN MemoryStore: Not enough space to cache rdd_11_4 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:11 WARN MemoryStore: Not enough space to cache rdd_11_5 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:14 WARN MemoryStore: Not enough space to cache rdd_11_6 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:50:14 WARN BlockManager: Persisting block rdd_11_6 to disk instead.\n",
+      "25/06/10 07:50:16 WARN MemoryStore: Not enough space to cache rdd_11_7 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:16 WARN BlockManager: Persisting block rdd_11_7 to disk instead.\n",
+      "25/06/10 07:50:21 WARN MemoryStore: Not enough space to cache rdd_11_6 in memory! (computed 27.3 MiB so far)\n",
+      "25/06/10 07:50:21 WARN MemoryStore: Not enough space to cache rdd_11_7 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:21 WARN MemoryStore: Not enough space to cache rdd_11_2 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:22 WARN MemoryStore: Not enough space to cache rdd_11_3 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:22 WARN MemoryStore: Not enough space to cache rdd_11_4 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:22 WARN MemoryStore: Not enough space to cache rdd_11_5 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:22 WARN MemoryStore: Not enough space to cache rdd_11_6 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:23 WARN MemoryStore: Not enough space to cache rdd_11_7 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:25 WARN MemoryStore: Not enough space to cache rdd_11_8 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:25 WARN BlockManager: Persisting block rdd_11_8 to disk instead.\n",
+      "25/06/10 07:50:27 WARN MemoryStore: Not enough space to cache rdd_11_8 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:27 WARN MemoryStore: Not enough space to cache rdd_11_2 in memory! (computed 27.3 MiB so far)\n",
+      "25/06/10 07:50:28 WARN MemoryStore: Not enough space to cache rdd_11_8 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:28 WARN MemoryStore: Not enough space to cache rdd_11_3 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:50:28 WARN MemoryStore: Not enough space to cache rdd_11_5 in memory! (computed 27.2 MiB so far)\n",
+      "25/06/10 07:50:28 WARN MemoryStore: Not enough space to cache rdd_11_4 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:28 WARN MemoryStore: Not enough space to cache rdd_11_6 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:50:28 WARN MemoryStore: Not enough space to cache rdd_11_8 in memory! (computed 27.3 MiB so far)\n",
+      "25/06/10 07:50:28 WARN MemoryStore: Not enough space to cache rdd_11_7 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:29 WARN MemoryStore: Not enough space to cache rdd_11_2 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:50:29 WARN MemoryStore: Not enough space to cache rdd_11_4 in memory! (computed 27.3 MiB so far)\n",
+      "25/06/10 07:50:29 WARN MemoryStore: Not enough space to cache rdd_11_3 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:29 WARN MemoryStore: Not enough space to cache rdd_11_5 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:50:29 WARN MemoryStore: Not enough space to cache rdd_11_6 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:29 WARN MemoryStore: Not enough space to cache rdd_11_7 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:50:29 WARN MemoryStore: Not enough space to cache rdd_11_8 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:31 WARN MemoryStore: Not enough space to cache rdd_11_2 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:50:33 WARN MemoryStore: Not enough space to cache rdd_11_5 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:50:33 WARN MemoryStore: Not enough space to cache rdd_11_4 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:35 WARN MemoryStore: Not enough space to cache rdd_11_7 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/10 07:50:36 WARN MemoryStore: Not enough space to cache rdd_11_0 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:36 WARN MemoryStore: Not enough space to cache rdd_11_8 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:37 WARN MemoryStore: Not enough space to cache rdd_11_1 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:42 WARN MemoryStore: Not enough space to cache rdd_11_2 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/10 07:50:47 WARN MemoryStore: Not enough space to cache rdd_11_4 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:47 WARN MemoryStore: Not enough space to cache rdd_11_5 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:50:53 WARN MemoryStore: Not enough space to cache rdd_11_7 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/10 07:50:56 WARN MemoryStore: Not enough space to cache rdd_11_8 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/10 07:50:57 WARN MemoryStore: Not enough space to cache rdd_11_0 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:51:01 WARN MemoryStore: Not enough space to cache rdd_11_1 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/10 07:51:01 WARN MemoryStore: Not enough space to cache rdd_11_2 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:51:04 WARN MemoryStore: Not enough space to cache rdd_11_4 in memory! (computed 101.0 MiB so far)\n",
+      "25/06/10 07:51:06 WARN MemoryStore: Not enough space to cache rdd_11_5 in memory! (computed 101.0 MiB so far)\n",
+      "25/06/10 07:51:09 WARN MemoryStore: Not enough space to cache rdd_11_7 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/10 07:51:10 WARN MemoryStore: Not enough space to cache rdd_11_8 in memory! (computed 42.7 MiB so far)\n",
+      "25/06/10 07:51:13 WARN MemoryStore: Not enough space to cache rdd_11_1 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:51:13 WARN MemoryStore: Not enough space to cache rdd_11_0 in memory! (computed 65.8 MiB so far)\n",
+      "25/06/10 07:51:14 WARN MemoryStore: Not enough space to cache rdd_11_3 in memory! (computed 101.1 MiB so far)\n",
+      "25/06/10 07:51:14 WARN MemoryStore: Not enough space to cache rdd_11_2 in memory! (computed 152.1 MiB so far)\n",
+      "25/06/10 07:51:15 WARN MemoryStore: Not enough space to cache rdd_11_5 in memory! (computed 101.0 MiB so far)\n",
+      "25/06/10 07:51:15 WARN MemoryStore: Not enough space to cache rdd_11_4 in memory! (computed 152.0 MiB so far)\n",
+      "25/06/10 07:51:18 WARN MemoryStore: Not enough space to cache rdd_11_8 in memory! (computed 101.1 MiB so far)\n",
       "                                                                                \r"
      ]
     },
@@ -111,15 +149,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+----------+------+-------+-----+-----+-----------+---------+--------+---------+--------------+------------------+------------+\n",
-      "|  nflId|    gameId|playId|frameId|    x|    y|  frameType|snapEvent|position|isOffence|yardlineNumber|          distance|max(frameId)|\n",
-      "+-------+----------+------+-------+-----+-----+-----------+---------+--------+---------+--------------+------------------+------------+\n",
-      "|52542.0|2022092511|  1986|     16|15.24|36.28|BEFORE_SNAP|       26|      FS|    false|            13|              2.24|          25|\n",
-      "|52542.0|2022092511|  1986|     17|15.31|36.31|BEFORE_SNAP|       26|      FS|    false|            13|2.3100000000000005|          25|\n",
-      "|52542.0|2022092511|  1986|     18|15.37|36.34|BEFORE_SNAP|       26|      FS|    false|            13| 2.369999999999999|          25|\n",
-      "|52542.0|2022092511|  1986|     19|15.42|36.36|BEFORE_SNAP|       26|      FS|    false|            13|              2.42|          25|\n",
-      "|52542.0|2022092511|  1986|     20|15.47|36.37|BEFORE_SNAP|       26|      FS|    false|            13|2.4700000000000006|          25|\n",
-      "+-------+----------+------+-------+-----+-----+-----------+---------+--------+---------+--------------+------------------+------------+\n",
+      "+-------+----------+------+-------+------+-----+-----------+---------+--------+---------+--------------+--------------+----------------+------------------+\n",
+      "|  nflId|    gameId|playId|frameId|     x|    y|  frameType|snapEvent|position|isOffence|yardlineNumber|play_direction|line_of_scrimage|          distance|\n",
+      "+-------+----------+------+-------+------+-----+-----------+---------+--------+---------+--------------+--------------+----------------+------------------+\n",
+      "|44848.0|2022092510|  2891|    107| 98.23|34.14|BEFORE_SNAP|      108|      SS|    false|            20|          left|              80|18.230000000000004|\n",
+      "|47882.0|2022092512|   713|     91| 77.51|38.45|BEFORE_SNAP|       92|      FS|    false|            29|          left|              71| 6.510000000000005|\n",
+      "|53592.0|2022092508|  3710|    158| 64.26|35.48|BEFORE_SNAP|      159|      FS|    false|            45|          left|              55| 9.260000000000005|\n",
+      "|38843.0|2022092502|  2337|     70|105.99| 35.2|BEFORE_SNAP|       71|      FS|    false|            13|          left|              87|18.989999999999995|\n",
+      "|35466.0|2022092505|  3278|    136| 45.11|26.32|BEFORE_SNAP|      137|      FS|    false|            21|          left|              79|             33.89|\n",
+      "+-------+----------+------+-------+------+-----+-----------+---------+--------+---------+--------------+--------------+----------------+------------------+\n",
       "only showing top 5 rows\n"
      ]
     }
@@ -158,11 +196,15 @@
     "\n",
     "safetyDf = safetyDf.join(playsDf.select(\"gameId\", \"playId\", \"yardlineNumber\"), on = [\"gameId\", \"playId\"], how = \"left\")\n",
     "\n",
-    "safetyDf = safetyDf.withColumn(\"distance\", abs(col(\"yardlineNumber\") - col(\"x\")))\n",
+    "safetyDf = safetyDf.withColumn(\"play_direction\", when(col(\"x\") < col(\"yardlineNumber\"), \"right\").otherwise(\"left\"))\n",
     "\n",
-    "frameGroupByDf = safetyDf.groupBy(\"nflId\", \"gameId\", \"playId\").agg(max_func(\"frameId\"))\n",
+    "safetyDf = safetyDf.withColumn(\"line_of_scrimage\",when(col(\"play_direction\") == \"left\", 100 - col(\"yardlineNumber\")).otherwise(col(\"yardlineNumber\")))\n",
     "\n",
-    "safetyDf = safetyDf.join(frameGroupByDf, on = [\"nflId\",\"gameId\", \"playId\"], how = \"inner\")\n",
+    "safetyDf = safetyDf.withColumn(\"distance\", abs(col(\"x\") - col(\"line_of_scrimage\")))\n",
+    "\n",
+    "frameGroupByDf = safetyDf.groupBy(\"nflId\", \"gameId\", \"playId\").agg(max_func(\"frameId\").alias(\"frameId\"))\n",
+    "\n",
+    "safetyDf = safetyDf.join(frameGroupByDf, on = [\"nflId\",\"gameId\", \"playId\", \"frameId\"], how = \"inner\")\n",
     "\n",
     "safetyDf.show(5)\n",
     "\n",
