--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "c6cb01ca",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "id": "2597fb1d",
    "metadata": {},
    "outputs": [],
@@ -27,18 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "id": "e8d8e76d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/06/10 16:37:15 WARN CacheManager: Asked to cache already cached data.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Select only desired columns and apply schema\n",
     "schema = StructType([\n",
@@ -63,23 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 50,
    "id": "aa6d2a8f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/06/10 16:37:15 WARN CacheManager: Asked to cache already cached data.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "schema = StructType([\n",
     "    StructField(\"gameId\", LongType(), True),\n",
     "    StructField(\"playId\", LongType(), True),\n",
     "    StructField(\"yardlineNumber\", LongType(), True),\n",
+    "    StructField(\"expectedPointsAdded\", DoubleType(), True),\n",
     "    StructField(\"offenseFormation\", StringType(), True), \n",
     "    StructField(\"receiverAlignment\", StringType(), True), \n",
     "    StructField(\"pff_passCoverage\", StringType(), True),\n",
@@ -87,12 +72,12 @@
     "    StructField(\"pff_runConceptPrimary\", StringType(), True)\n",
     "])\n",
     "\n",
-    "playsDf = spark.read.schema(schema).parquet(\"data/plays.parquet\").cache()"
+    "playsDf = spark.read.schema(schema).parquet(\"data/plays.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "id": "dfa1c3f2",
    "metadata": {},
    "outputs": [],
@@ -104,12 +89,12 @@
     "])\n",
     "\n",
     "#Read in players datasource and apply schema\n",
-    "playersDf = spark.read.schema(schema).parquet(\"data/players.parquet\").cache()"
+    "playersDf = spark.read.schema(schema).parquet(\"data/players.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 52,
    "id": "608c9d6c",
    "metadata": {},
    "outputs": [],
@@ -137,6 +122,7 @@
     "#Get the yardline of the play\n",
     "safetyDf = safetyDf.join(playsDf.select(\"gameId\", \"playId\", \"yardlineNumber\"), on = [\"gameId\", \"playId\"], how = \"left\")\n",
     "\n",
+    "\n",
     "#Determine which direction the offence is facing\n",
     "safetyDf = safetyDf.withColumn(\"play_direction\", when(col(\"x\") < col(\"yardlineNumber\"), \"right\").otherwise(\"left\"))\n",
     "\n",
@@ -153,12 +139,12 @@
     "safetyDf = safetyDf.join(frameGroupByDf, on = [\"nflId\",\"gameId\", \"playId\", \"frameId\"], how = \"inner\")\n",
     "\n",
     "#Create the two features by averaging the safety depth and creating a count of safeties\n",
-    "safetyDf = safetyDf.groupBy(\"gameId\", \"playId\").agg(avg(\"distance\").alias(\"avgSafetyDistance\"), count(\"distance\").alias(\"numSafeties\"))"
+    "safetyDf = safetyDf.groupBy(\"gameId\", \"playId\").agg(avg(\"distance\").alias(\"avgSafetyDistance\"), count(\"distance\").alias(\"numSafeties\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "7b5f5ecd",
    "metadata": {},
    "outputs": [],
@@ -203,83 +189,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "id": "d19e507d",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "DataFrame[gameId: bigint, playId: bigint, nflId: double, frameId: bigint, x: double, y: double, frameType: string]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Entire Dataframe ready for ML workflow, join all feature tables together\n",
+    "mergedDf = playsDf.join(playMotion, [\"gameId\", \"playId\"], \"inner\").join(safetyDf, [\"gameId\", \"playId\"], \"inner\")\n",
+    "playMotion.unpersist()\n",
+    "trackingDf.unpersist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "29fd8396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Some data exploration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "b6208063",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Commencing evaluation on LinearRegression !\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/06/10 16:37:17 WARN MemoryStore: Not enough space to cache rdd_8_0 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:37:17 WARN MemoryStore: Not enough space to cache rdd_8_1 in memory! (computed 152.0 MiB so far)\n",
-      "25/06/10 16:37:24 WARN MemoryStore: Not enough space to cache rdd_8_3 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:37:24 WARN MemoryStore: Not enough space to cache rdd_8_2 in memory! (computed 152.1 MiB so far)\n",
-      "25/06/10 16:37:27 WARN MemoryStore: Not enough space to cache rdd_8_5 in memory! (computed 101.0 MiB so far)\n",
-      "25/06/10 16:37:27 WARN MemoryStore: Not enough space to cache rdd_8_4 in memory! (computed 152.0 MiB so far)\n",
-      "25/06/10 16:37:32 WARN MemoryStore: Not enough space to cache rdd_8_8 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:37:32 WARN MemoryStore: Not enough space to cache rdd_8_0 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/10 16:37:35 WARN MemoryStore: Not enough space to cache rdd_8_1 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:37:37 WARN MemoryStore: Not enough space to cache rdd_8_2 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/10 16:37:39 WARN MemoryStore: Not enough space to cache rdd_8_3 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:37:41 WARN MemoryStore: Not enough space to cache rdd_8_4 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/10 16:37:43 WARN MemoryStore: Not enough space to cache rdd_8_5 in memory! (computed 101.0 MiB so far)\n",
-      "25/06/10 16:37:47 WARN MemoryStore: Not enough space to cache rdd_8_8 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:37:49 WARN MemoryStore: Not enough space to cache rdd_8_0 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/10 16:37:51 WARN MemoryStore: Not enough space to cache rdd_8_1 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:37:54 WARN MemoryStore: Not enough space to cache rdd_8_2 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:37:55 WARN MemoryStore: Not enough space to cache rdd_8_3 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/10 16:37:58 WARN MemoryStore: Not enough space to cache rdd_8_4 in memory! (computed 101.0 MiB so far)\n",
-      "25/06/10 16:37:58 WARN MemoryStore: Not enough space to cache rdd_8_5 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/10 16:38:04 WARN MemoryStore: Not enough space to cache rdd_8_0 in memory! (computed 152.0 MiB so far)\n",
-      "25/06/10 16:38:09 WARN MemoryStore: Not enough space to cache rdd_8_2 in memory! (computed 65.8 MiB so far)\n",
-      "25/06/10 16:38:09 WARN MemoryStore: Not enough space to cache rdd_8_3 in memory! (computed 65.8 MiB so far)\n",
-      "25/06/10 16:38:11 WARN MemoryStore: Not enough space to cache rdd_8_4 in memory! (computed 152.0 MiB so far)\n",
-      "25/06/10 16:38:11 WARN MemoryStore: Not enough space to cache rdd_8_5 in memory! (computed 101.0 MiB so far)\n",
-      "25/06/10 16:38:13 WARN MemoryStore: Not enough space to cache rdd_8_8 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:38:13 WARN MemoryStore: Not enough space to cache rdd_8_0 in memory! (computed 27.3 MiB so far)\n",
-      "25/06/10 16:38:17 WARN MemoryStore: Not enough space to cache rdd_8_2 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:38:19 WARN MemoryStore: Not enough space to cache rdd_8_4 in memory! (computed 101.0 MiB so far)\n",
-      "25/06/10 16:38:21 WARN MemoryStore: Not enough space to cache rdd_8_6 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:38:21 WARN MemoryStore: Not enough space to cache rdd_8_7 in memory! (computed 27.3 MiB so far)\n",
-      "25/06/10 16:38:22 WARN MemoryStore: Not enough space to cache rdd_8_0 in memory! (computed 152.0 MiB so far)\n",
-      "25/06/10 16:38:23 WARN MemoryStore: Not enough space to cache rdd_8_1 in memory! (computed 152.0 MiB so far)\n",
-      "25/06/10 16:38:26 WARN MemoryStore: Not enough space to cache rdd_8_4 in memory! (computed 42.7 MiB so far)\n",
-      "25/06/10 16:38:26 WARN MemoryStore: Not enough space to cache rdd_8_5 in memory! (computed 65.8 MiB so far)\n",
-      "25/06/10 16:38:28 WARN MemoryStore: Not enough space to cache rdd_8_7 in memory! (computed 101.1 MiB so far)\n",
-      "25/06/10 16:38:29 WARN MemoryStore: Not enough space to cache rdd_8_8 in memory! (computed 101.1 MiB so far)\n",
-      "[Stage 357:>                                                        (0 + 1) / 1]\r"
+      "25/06/11 15:19:43 WARN Instrumentation: [8a6bd787] regParam is zero, which might cause numerical instability and overfitting.\n",
+      "25/06/11 15:20:01 WARN Instrumentation: [8a6bd787] Cholesky solver failed due to singular covariance matrix. Retrying with Quasi-Newton solver.\n",
+      "                                                                                \r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+------+--------------+----------------+-----------------+----------------+-----------+---------------------+---------------+---------------+------------------+-----------+\n",
-      "|    gameId|playId|yardlineNumber|offenseFormation|receiverAlignment|pff_passCoverage|pff_manZone|pff_runConceptPrimary|isOffenceMoving|isDefenceMoving| avgSafetyDistance|numSafeties|\n",
-      "+----------+------+--------------+----------------+-----------------+----------------+-----------+---------------------+---------------+---------------+------------------+-----------+\n",
-      "|2022090800|   212|            34|         SHOTGUN|              2x2|         Cover-1|        Man|                 NULL|           true|           true| 3.219999999999999|          2|\n",
-      "|2022090800|  1230|            44|         SHOTGUN|              3x1|        Quarters|       Zone|                 NULL|          false|          false| 4.079999999999998|          2|\n",
-      "|2022090800|  1504|            27|         SHOTGUN|              2x2|         Cover-3|       Zone|                 NULL|          false|          false|             24.81|          2|\n",
-      "|2022090800|  2208|            15|         SHOTGUN|              3x1|         Cover-3|       Zone|                 NULL|           true|          false|1.0200000000000005|          2|\n",
-      "|2022090800|  3674|            16|         SHOTGUN|              2x2|        Quarters|       Zone|                 NULL|           true|          false|35.584999999999994|          2|\n",
-      "|2022091100|    99|            42|      SINGLEBACK|              2x2|   Cover-6 Right|       Zone|         OUTSIDE ZONE|          false|          false| 5.336666666666669|          3|\n",
-      "|2022091100|   501|            23|      SINGLEBACK|              3x1|         Cover-2|       Zone|         OUTSIDE ZONE|           true|           true| 2.635000000000005|          2|\n",
-      "|2022091100|   828|            26|         SHOTGUN|              3x1|         Cover-0|        Man|                 NULL|          false|           true|              40.1|          2|\n",
-      "|2022091100|  1552|            18|          PISTOL|              3x1|         Cover-3|       Zone|                  MAN|          false|          false| 6.993333333333335|          3|\n",
-      "|2022091100|  2204|            32|      SINGLEBACK|              3x1|         Cover-3|       Zone|         OUTSIDE ZONE|           true|          false|             20.22|          2|\n",
-      "|2022091100|  2984|             9|          PISTOL|              2x1|        Red Zone|      Other|                  MAN|          false|          false| 80.91999999999999|          2|\n",
-      "|2022091100|  3504|            41|         SHOTGUN|              2x2|         Cover-2|       Zone|                 NULL|          false|          false| 8.684999999999999|          2|\n",
-      "|2022091100|  4102|            50|         SHOTGUN|              3x1|         Cover-1|        Man|                 NULL|          false|          false|             24.22|          2|\n",
-      "|2022091100|  4187|            25|         SHOTGUN|              3x1|        Quarters|       Zone|                 NULL|          false|          false|2.7866666666666666|          3|\n",
-      "|2022091101|  1192|            42|          PISTOL|              2x1|        Quarters|       Zone|            UNDEFINED|           true|          false|17.854999999999997|          2|\n",
-      "|2022091101|  1213|            40|         SHOTGUN|              2x2|         Cover-3|       Zone|                POWER|          false|          false|14.809999999999997|          3|\n",
-      "|2022091101|  1537|            46|          PISTOL|              2x1|         Cover-1|        Man|                POWER|           true|           true| 8.533333333333333|          3|\n",
-      "|2022091101|  2227|            25|            NULL|             NULL|            NULL|       NULL|            UNDEFINED|          false|          false|0.2700000000000031|          2|\n",
-      "|2022091101|  2341|            29|         SHOTGUN|              3x1|         Cover-2|       Zone|                 NULL|          false|          false|             19.79|          2|\n",
-      "|2022091101|  2545|            16|      SINGLEBACK|              3x1|         Cover-3|       Zone|         OUTSIDE ZONE|           true|          false| 17.05666666666667|          3|\n",
-      "+----------+------+--------------+----------------+-----------------+----------------+-----------+---------------------+---------------+---------------+------------------+-----------+\n",
-      "only showing top 20 rows\n"
+      "LinearRegression = 1.4334910939355152\n",
+      "Commencing evaluation on GBT Regressor !\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GBT Regressor = 1.4405979896460048\n",
+      "Commencing evaluation on Random Forest !\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 2367:==================================================>   (13 + 1) / 14]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest = 1.4302780286061614\n"
      ]
     },
     {
@@ -291,9 +289,55 @@
     }
    ],
    "source": [
-    "mergedDf = playsDf.join(playMotion, [\"gameId\", \"playId\"], \"inner\").join(safetyDf, [\"gameId\", \"playId\"], \"inner\")\n",
+    "from pyspark.ml import Pipeline\n",
+    "#Import pipeline features\n",
+    "from pyspark.ml.feature import OneHotEncoder, StandardScaler, StringIndexer, VectorAssembler\n",
+    "#Import evaluator object\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "#Import potential models\n",
+    "from pyspark.ml.regression import LinearRegression, GBTRegressor, RandomForestRegressor\n",
     "\n",
-    "mergedDf.show()"
+    "#Split the data \n",
+    "trainDf, testDf = mergedDf.randomSplit([0.8, 0.2], seed = 1)\n",
+    "\n",
+    "target = \"expectedPointsAdded\"\n",
+    "numFeatures = [\"gameId\", \"playId\", \"yardlineNumber\", \"avgSafetyDistance\", \"numSafeties\"]\n",
+    "boolFeatures = [\"isOffenceMoving\", \"isDefenceMoving\"]\n",
+    "textFeatures = [\"offenseFormation\", \"receiverAlignment\", \"pff_passCoverage\", \"pff_manZone\", \"pff_runConceptPrimary\"]\n",
+    "\n",
+    "#Text handler, pySpark's onehotencoder only accepts numerical input (hence StringIndexer)\n",
+    "#Indexer maps strings to integers\n",
+    "indexer = [StringIndexer(inputCol=columnName, outputCol=columnName + \"idx\", handleInvalid=\"keep\") for columnName in textFeatures]\n",
+    "#Encoder maps integer to vector\n",
+    "encoder = [OneHotEncoder(inputCol=columnName + \"idx\", outputCol=columnName + \"vector\") for columnName in textFeatures]\n",
+    "\n",
+    "assembler = VectorAssembler(inputCols= numFeatures + boolFeatures + [columnName + \"vector\" for columnName in textFeatures], outputCol=\"features\")\n",
+    "scaler = StandardScaler(inputCol= \"features\", outputCol=\"features-Scaled\")\n",
+    "\n",
+    "potentialModels = {\"LinearRegression\": LinearRegression(featuresCol=\"features-Scaled\", labelCol=target),\n",
+    "                   \"GBT Regressor\": GBTRegressor(featuresCol=\"features-Scaled\", labelCol=target),\n",
+    "                   \"Random Forest\" : RandomForestRegressor(featuresCol=\"features-Scaled\", labelCol=target)\n",
+    "                   }\n",
+    "\n",
+    "evalObj = RegressionEvaluator(metricName=\"rmse\", labelCol=target, predictionCol=\"prediction\")\n",
+    "\n",
+    "colsToDrop = numFeatures + boolFeatures + textFeatures + [columnName + \"idx\" for columnName in textFeatures] + [columnName + \"vector\" for columnName in textFeatures]\n",
+    "\n",
+    "\n",
+    "for modelName, model in potentialModels.items():\n",
+    "    print(f\"Commencing evaluation on {modelName} !\")\n",
+    "\n",
+    "    pipeline = Pipeline(stages = indexer + encoder + [assembler, scaler, model])\n",
+    "\n",
+    "    fullPipelineObj = pipeline.fit(trainDf)\n",
+    "\n",
+    "    predictions = fullPipelineObj.transform(testDf)\n",
+    "    \n",
+    "    predictions.drop(*colsToDrop)\n",
+    "    \n",
+    "    rmse = evalObj.evaluate(predictions)\n",
+    "\n",
+    "    print(f\"{modelName} = {rmse}\")\n"
    ]
   }
  ],
