--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "c6cb01ca",
    "metadata": {},
    "outputs": [],
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "2597fb1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create spark session\n",
-    "spark = SparkSession.builder.appName(\"Formation insights\").getOrCreate()"
+    "spark = SparkSession.builder.appName(\"Formation insights\").master(\"local[*]\").getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "e8d8e76d",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "aa6d2a8f",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "id": "dfa1c3f2",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "id": "608c9d6c",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "id": "7b5f5ecd",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "id": "d19e507d",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "DataFrame[gameId: bigint, playId: bigint, nflId: double, frameId: bigint, x: double, y: double, frameType: string]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "id": "29fd8396",
    "metadata": {},
    "outputs": [],
@@ -223,71 +223,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "id": "b6208063",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Commencing evaluation on LinearRegression !\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/06/11 15:19:43 WARN Instrumentation: [8a6bd787] regParam is zero, which might cause numerical instability and overfitting.\n",
-      "25/06/11 15:20:01 WARN Instrumentation: [8a6bd787] Cholesky solver failed due to singular covariance matrix. Retrying with Quasi-Newton solver.\n",
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LinearRegression = 1.4334910939355152\n",
-      "Commencing evaluation on GBT Regressor !\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GBT Regressor = 1.4405979896460048\n",
-      "Commencing evaluation on Random Forest !\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 2367:==================================================>   (13 + 1) / 14]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest = 1.4302780286061614\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.ml import Pipeline\n",
     "#Import pipeline features\n",
@@ -324,20 +263,129 @@
     "colsToDrop = numFeatures + boolFeatures + textFeatures + [columnName + \"idx\" for columnName in textFeatures] + [columnName + \"vector\" for columnName in textFeatures]\n",
     "\n",
     "\n",
-    "for modelName, model in potentialModels.items():\n",
-    "    print(f\"Commencing evaluation on {modelName} !\")\n",
+    "#for modelName, model in potentialModels.items():\n",
+    " #   print(f\"Commencing evaluation on {modelName} !\")\n",
+    "#\n",
+    " #   pipeline = Pipeline(stages = indexer + encoder + [assembler, scaler, model])\n",
+    "#\n",
+    " #   fullPipelineObj = pipeline.fit(trainDf)\n",
+    "#\n",
+    " #   predictions = fullPipelineObj.transform(testDf)\n",
+    "  #  \n",
+    "   # predictions.drop(*colsToDrop)\n",
+    "    #\n",
+    "    #rmse = evalObj.evaluate(predictions)\n",
     "\n",
-    "    pipeline = Pipeline(stages = indexer + encoder + [assembler, scaler, model])\n",
+    "    #print(f\"{modelName} = {rmse}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c0569c4",
+   "metadata": {},
+   "source": [
+    "Commencing evaluation on LinearRegression !\n",
+    "25/06/11 15:19:43 WARN Instrumentation: [8a6bd787] regParam is zero, which might cause numerical instability and overfitting.\n",
+    "25/06/11 15:20:01 WARN Instrumentation: [8a6bd787] Cholesky solver failed due to singular covariance matrix. Retrying with Quasi-Newton solver.\n",
+    "                                                                                \n",
+    "LinearRegression = 1.4334910939355152\n",
+    "Commencing evaluation on GBT Regressor !\n",
+    "                                                                                \n",
+    "GBT Regressor = 1.4405979896460048\n",
+    "Commencing evaluation on Random Forest !\n",
+    "[Stage 2367:==================================================>   (13 + 1) / 14]\n",
+    "Random Forest = 1.4302780286061614"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6fa2cace",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 918:======>      (102 + 2) / 200][Stage 920:>              (0 + 0) / 200]\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.python/current/lib/python3.12/multiprocessing/pool.py:856\u001b[39m, in \u001b[36mIMapIterator.next\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m    855\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m856\u001b[39m     item = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_items\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpopleft\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    857\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m:\n",
+      "\u001b[31mIndexError\u001b[39m: pop from an empty deque",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[32m      7\u001b[39m paraGrid = ParamGridBuilder() \\\n\u001b[32m      8\u001b[39m     .addGrid(RFR.numTrees, [\u001b[32m10\u001b[39m, \u001b[32m50\u001b[39m, \u001b[32m100\u001b[39m, \u001b[32m200\u001b[39m]) \\\n\u001b[32m      9\u001b[39m     .addGrid(RFR.maxDepth, [\u001b[32m2\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m10\u001b[39m, \u001b[32m20\u001b[39m]) \\\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m     .addGrid(RFR.minInstancesPerNode, [\u001b[32m1\u001b[39m, \u001b[32m5\u001b[39m]) \\\n\u001b[32m     13\u001b[39m     .build()\n\u001b[32m     15\u001b[39m CrossVal = CrossValidator(\n\u001b[32m     16\u001b[39m     estimator=pipeline,\n\u001b[32m     17\u001b[39m     estimatorParamMaps=paraGrid,\n\u001b[32m   (...)\u001b[39m\u001b[32m     20\u001b[39m     parallelism=\u001b[32m2\u001b[39m  \u001b[38;5;66;03m# increase this based on your Spark cluster\u001b[39;00m\n\u001b[32m     21\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m CrossValModel = \u001b[43mCrossVal\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrainDf\u001b[49m\u001b[43m)\u001b[49m \n\u001b[32m     25\u001b[39m predictions = CrossValModel.transform(testDf)\n\u001b[32m     26\u001b[39m rmse = evalObj.evaluate(predictions)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.python/current/lib/python3.12/site-packages/pyspark/ml/base.py:203\u001b[39m, in \u001b[36mEstimator.fit\u001b[39m\u001b[34m(self, dataset, params)\u001b[39m\n\u001b[32m    201\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.copy(params)._fit(dataset)\n\u001b[32m    202\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m203\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_fit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    204\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    205\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[32m    206\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mParams must be either a param map or a list/tuple of param maps, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    207\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mbut got \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m % \u001b[38;5;28mtype\u001b[39m(params)\n\u001b[32m    208\u001b[39m     )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.python/current/lib/python3.12/site-packages/pyspark/ml/tuning.py:858\u001b[39m, in \u001b[36mCrossValidator._fit\u001b[39m\u001b[34m(self, dataset)\u001b[39m\n\u001b[32m    852\u001b[39m train = datasets[i][\u001b[32m0\u001b[39m].cache()\n\u001b[32m    854\u001b[39m tasks = \u001b[38;5;28mmap\u001b[39m(\n\u001b[32m    855\u001b[39m     inheritable_thread_target(dataset.sparkSession),\n\u001b[32m    856\u001b[39m     _parallelFitTasks(est, train, eva, validation, epm, collectSubModelsParam),\n\u001b[32m    857\u001b[39m )\n\u001b[32m--> \u001b[39m\u001b[32m858\u001b[39m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetric\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubModel\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mpool\u001b[49m\u001b[43m.\u001b[49m\u001b[43mimap_unordered\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtasks\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m    859\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmetrics_all\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetric\u001b[49m\n\u001b[32m    860\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mcollectSubModelsParam\u001b[49m\u001b[43m:\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.python/current/lib/python3.12/multiprocessing/pool.py:861\u001b[39m, in \u001b[36mIMapIterator.next\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m    859\u001b[39m     \u001b[38;5;28mself\u001b[39m._pool = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    860\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m861\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_cond\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    862\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    863\u001b[39m     item = \u001b[38;5;28mself\u001b[39m._items.popleft()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.python/current/lib/python3.12/threading.py:355\u001b[39m, in \u001b[36mCondition.wait\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m    353\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:    \u001b[38;5;66;03m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[32m    354\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m355\u001b[39m         \u001b[43mwaiter\u001b[49m\u001b[43m.\u001b[49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    356\u001b[39m         gotit = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    357\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 918:=======>     (112 + 2) / 200][Stage 920:>              (0 + 0) / 200]\r"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator\n",
     "\n",
-    "    fullPipelineObj = pipeline.fit(trainDf)\n",
+    "RFR = RandomForestRegressor(featuresCol=\"features-Scaled\", labelCol=target)\n",
     "\n",
-    "    predictions = fullPipelineObj.transform(testDf)\n",
-    "    \n",
-    "    predictions.drop(*colsToDrop)\n",
-    "    \n",
-    "    rmse = evalObj.evaluate(predictions)\n",
+    "pipeline = Pipeline(stages = indexer + encoder + [assembler, scaler, RFR])\n",
     "\n",
-    "    print(f\"{modelName} = {rmse}\")\n"
+    "paraGrid = ParamGridBuilder() \\\n",
+    "    .addGrid(RFR.numTrees, [20, 50, 100, 200]) \\\n",
+    "    .addGrid(RFR.maxDepth, [5, 10, 20]) \\\n",
+    "    .addGrid(RFR.featureSubsetStrategy, ['auto', 'sqrt']) \\\n",
+    "    .addGrid(RFR.maxBins, [32, 64]) \\\n",
+    "    .addGrid(RFR.minInstancesPerNode, [1, 5]) \\\n",
+    "    .build()\n",
+    "\n",
+    "CrossVal = CrossValidator(\n",
+    "    estimator=pipeline,\n",
+    "    estimatorParamMaps=paraGrid,\n",
+    "    evaluator=evalObj,\n",
+    "    numFolds=3,\n",
+    "    parallelism=2  # increase this based on your Spark cluster\n",
+    ")\n",
+    "\n",
+    "CrossValModel = CrossVal.fit(trainDf) \n",
+    "\n",
+    "predictions = CrossValModel.transform(testDf)\n",
+    "rmse = evalObj.evaluate(predictions)\n",
+    "print(f\"Optimised RFR: {rmse}\")\n",
+    "\n",
+    "trainDf.unpersist()\n",
+    "del trainDf\n",
+    "testDf.unpersist()\n",
+    "del testDf\n",
+    "spark.catalog.clearCache()\n",
+    "\n",
+    "bestModel = CrossValModel.bestModel\n",
+    "\n",
+    "RFR_model = bestModel.stages[-1]\n",
+    "\n",
+    "bestPara = {\n",
+    "    'numTrees': RFR_model.getNumTrees,\n",
+    "    'maxDepth': RFR_model.getMaxDepth,\n",
+    "    'maxBins': RFR_model.getMaxBins,\n",
+    "    'minInstancesPerNode': RFR_model.getMinInstancesPerNode,\n",
+    "    'featureSubsetStrategy': RFR_model.getFeatureSubsetStrategy\n",
+    "}\n",
+    "\n",
+    "for hyperPara, value in bestPara.items():\n",
+    "    print(f\"  {hyperPara}: {value()}\")"
    ]
   }
  ],
