Addition of testing and error handling

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2597fb1d",
    "metadata": {},
    "outputs": [],
@@ -29,12 +29,12 @@
     "spark = SparkSession.builder \\\n",
     "    .appName(\"Steve\") \\\n",
     "    .config(\"spark.driver.memory\", \"16g\") \\\n",
-    "    .getOrCreate()\n"
+    "    .getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e8d8e76d",
    "metadata": {},
    "outputs": [],
@@ -50,10 +50,9 @@
     "    StructField(\"frameType\", StringType(), True)\n",
     "])\n",
     "\n",
-    "\n",
+    "#Read all the tracking data (which should have same schema) into one dataframe\n",
     "folder = \"data/tracking/\"\n",
     "files = [os.path.join(folder, f) for f in os.listdir(folder) if f.endswith(\".parquet\")]\n",
-    "\n",
     "trackingDf = spark.read.schema(schema).parquet(*files)\n",
     "\n",
     "#Filter and select tracking data just before the snap - to determine if there is any pre-snap motion\n",
@@ -477,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6fa2cace",
    "metadata": {},
    "outputs": [
@@ -538,7 +537,7 @@
     "\n",
     "predictions = CrossValModel.transform(testDf)\n",
     "rmse = evalObj.evaluate(predictions)\n",
-    "print(f\"Optimised RFR: {rmse}\")\n",
+    "print(f\"Optimised RMSE: {rmse}\")\n",
     "\n",
     "#To save memory\n",
     "trainDf.unpersist()\n",
